[package]
name = "dana_nameserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.5", default-features = false, features = ["http1", "json", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
silentpayments = "0.4.1"
faker_rand = "0.1.1"
rand = "0.8.5"
bip353-rs = { path="../bip353-rs" }
bitcoin-payment-instructions = { path="../bitcoin-payment-instructions" }
